testsuite/tests/interpreter_errors/call_property_wrong_arity/test.out
main.adb
script.lkql:2:34: error: Expected 1 arguments but got 2
2 | print(names[1].p_referenced_decl(true, 1))
  |                                  ^^^^^^^ 

